openshift/indico-celery.yml
kind: List
apiVersion: v1
items:

# indico-celery Deployment Config
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.service: indico-celery
    name: indico-celery
  spec:
    replicas: 1
    selector:
      io.kompose.service: indico-celery
    strategy:
      resources: {}
    template:
      metadata:
        creationTimestamp: null
        labels:
          io.kompose.service: indico-celery
      spec:
        containers:
        - args:
          - ./opt/indico/run_celery.sh
          image: 'docker-registry.rahti.csc.fi/neic/indico:v5'
          imagePullPolicy: Always
          name: indico-celery
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 512Mi

# indico-celery Service
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      io.kompose.service: indico-celery
    name: indico-celery
  spec:
    ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
    selector:
      io.kompose.service: indico-celery
