openshift/indico-web.yml
kind: List
apiVersion: v1
items:

# indico's Volume 0
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      io.kompose.service: indico-web-claim0
    name: indico-web-claim0
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 100Mi
  status: {}

# indico's Volume 1
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      io.kompose.service: indico-web-claim1
    name: indico-web-claim1
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 100Mi
  status: {}

# indico's customization Volume
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      io.kompose.service: customization
    name: customization
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 100Mi
  status: {}


# indico's Deployment Config
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      io.kompose.service: indico-web
    name: indico-web
  spec:
    replicas: 1
    selector:
      io.kompose.service: indico-web
    strategy:
      resources: {}
    template:
      metadata:
        creationTimestamp: null
        labels:
          io.kompose.service: indico-web
      spec:
        containers:
        - name: indico-web
          image: 'docker-registry.rahti.csc.fi/neic/indico:v5'
          imagePullPolicy: Always
          args:
          - ./opt/indico/run_indico.sh
          livenessProbe:
            exec:
              command:
              - curl
              - 127.0.0.1:59999/contact
            initialDelaySeconds: 120
            timeoutSeconds: 20
          readinessProbe:
            exec:
              command:
              - curl
              - 127.0.0.1:59999/contact
            initialDelaySeconds: 60
            timeoutSeconds: 20
          ports:
          - containerPort: 59999
          resources:
            limits:
              cpu: 800m
              memory: 2Gi
            requests:
              cpu: 400m
              memory: 512Mi
          volumeMounts:
          - mountPath: /opt/indico/archive
            name: indico-web-claim0
          - mountPath: /opt/indico/custom
            name: customization
        restartPolicy: Always
        volumes:
        - name: indico-web-claim0
          persistentVolumeClaim:
            claimName: indico-web-claim0
        - name: indico-web-claim1
          persistentVolumeClaim:
            claimName: indico-web-claim1
        - name: customization
          persistentVolumeClaim:
            claimName: customization

# indico-web Service
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      io.kompose.service: indico-web
    name: indico-web
  spec:
    ports:
    - name: "main"
      port: 59999
      targetPort: 59999
    selector:
      io.kompose.service: indico-web

# expose indico
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      io.kompose.service: indico-web
    name: indico
  spec:
    port:
      targetPort: main
    to:
      kind: Service
      name: indico-web
